fix vert alignment

--- a/frontend/src/pages/Error/ErrorPage.module.scss
+++ b/frontend/src/pages/Error/ErrorPage.module.scss
@@ -144,6 +144,10 @@
     display: flex;
     font-weight: 400;
     justify-content: space-between;
+
+    span {
+        display: inline-flex;
+    }
 }
 
 .triggerWrapper {
